Refactor Config class for improved readability